--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
 ---
 layout: default
 ---
+
+{% include homepage/_hero.html %}
+{% include homepage/_services.html %}
+{% include homepage/_intro_banner.html %}
+{% include _skills.html %}
+{% include _projects_carousel.html %}
+{% include _team.html %}
+{% include _testimonials.html %}
+{% include _news.html %}
+{% include _sponsors.html %}
+
+{% include _footer.html %}
